Update NURSE_CONDITIONS structure in ExcelParserV5
Refactor NURSE_CONDITIONS initialization to include filters for NurseCallsCondition.